<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/container"
        android:layout_marginBottom="55dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:id="@+id/liBottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hint_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5.5dp"
            android:paddingBottom="4.3dp">

            <LinearLayout
                android:id="@+id/lihome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivhome"
                    android:layout_width="25dp"
                    android:layout_height="29dp"
                    android:src="@drawable/homeicon" />

                <TextView
                    android:id="@+id/tvhome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/home"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llnearby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/ivnearby"
                    android:layout_width="23dp"
                    android:layout_height="29dp"
                    android:src="@drawable/wlogo"/>

                <TextView
                    android:id="@+id/tvnearby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="Contact "
                    android:textColor="@color/orange_fd6c57"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/llchat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chat" />

                <TextView
                    android:id="@+id/tvchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/inbox"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liappointment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivappointment"
                    android:layout_width="25dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_appointment" />

                <TextView
                    android:id="@+id/tvappointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/appointment"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liprofile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivprofile"
                    android:layout_width="25dp"
                    android:layout_height="29dp"
                    android:src="@drawable/ic_profile" />

                <TextView
                    android:id="@+id/tvprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/profile"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>