<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MapsActivity" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_color"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="24dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/sf_pro_display_medium"
                                    android:includeFontPadding="false"
                                    android:text="Your Location"
                                    android:textColor="@color/txt_silver"
                                    android:textSize="12sp" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5.9dp"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="12.5dp"
                                        android:layout_height="17.1dp"
                                        android:src="@drawable/ic_location_pin" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="7dp"
                                        android:fontFamily="@font/sf_pro_display_medium"
                                        android:includeFontPadding="false"
                                        android:text="Dungarpur"
                                        android:textColor="@color/pure_black"
                                        android:textSize="15sp" />

                                    <ImageView
                                        android:layout_marginTop="1.5dp"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="20dp"
                                        android:src="@drawable/ic_direction" />
                                </LinearLayout>
                            </LinearLayout>

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_filter" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="15.5dp"
                            android:orientation="horizontal">

                            <EditText
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/rect_gray"
                                android:drawableStart="@drawable/ic_search_black_24dp"
                                android:drawablePadding="8dp"
                                android:fontFamily="@font/sf_pro_display_regular"
                                android:hint="Salon"
                                android:paddingStart="11dp"
                                android:paddingTop="8dp"
                                android:paddingEnd="11dp"
                                android:paddingBottom="8dp"
                                android:textColor="@color/pure_black"
                                android:textColorHint="@color/title_gray"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_marginStart="15dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/sf_pro_display_bold"
                                android:includeFontPadding="false"
                                android:text="Cancel"
                                android:textColor="@color/orange_fd6c57"
                                android:textSize="15sp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="55dp"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="17dp"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:paddingStart="16dp" />

                </RelativeLayout>

            </FrameLayout>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/liBottombar"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/circle_orange_shadow">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="-4dp"
            android:src="@drawable/ic_drawer" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/liBottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hint_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5.5dp"
            android:paddingBottom="4.3dp">

            <LinearLayout
                android:id="@+id/llhome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivhome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tvhome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/home"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llnearby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivnearby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_nearby" />

                <TextView
                    android:id="@+id/tvnearby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/nearby"
                    android:textColor="@color/orange_fd6c57"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llchat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chat" />

                <TextView
                    android:id="@+id/tvchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/inbox"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llappointment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivappointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_appointment" />

                <TextView
                    android:id="@+id/tvappointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/appointment"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llprofile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_profile" />

                <TextView
                    android:id="@+id/tvprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:includeFontPadding="false"
                    android:text="@string/profile"
                    android:textColor="@color/title_gray"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
